salesforce/force-app/main/default/objects/FoodDistribution__c/FoodDistribution__c.object-meta.xml
<CustomObject>
    <label>Food Distribution</label>
    <nameField>
        <label>Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Food Distributions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>