salesforce/force-app/main/default/objects/FoodDistribution__c/fields/CCO_Organization__c.field-meta.xml
<CustomField>
    <fullName>CCO_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CCO Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>FoodDistributions</relationshipName>
    <type>Lookup</type>
</CustomField>