salesforce/force-app/main/default/objects/FoodDistribution__c/fields/Distribution_Date__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Date__c</fullName>
    <label>Distribution Date</label>
    <type>DateTime</type>
</CustomField>