salesforce/force-app/main/default/objects/FoodDistribution__c/fields/Food_Type__c.field-meta.xml
<CustomField>
    <fullName>Food_Type__c</fullName>
    <label>Food Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fresh Produce</fullName>
            </value>
            <value>
                <fullName>Canned Goods</fullName>
            </value>
            <value>
                <fullName>Frozen Meat</fullName>
            </value>
            <value>
                <fullName>Dairy</fullName>
            </value>
            <value>
                <fullName>Mixed Box</fullName>
                <default>true</default>
                <label>Mixed Box</label>
            </value>
            <value>
                <fullName>Strawberry Harvest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>