salesforce/force-app/main/default/objects/FoodDistribution__c/fields/Quantity_Available__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Available__c</fullName>
    <label>Quantity Available</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>